[package]
name = "rust_scripts"
version = "0.1.0"
authors = ["Tri Vuong <trivektor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10", features = ["json", "blocking"]}
json = "0.12.4"
